@@ -1,3 +1,5 @@
+* Optimize Fuse.String#lastIndexOf by removing the use of the arguments object and make Fuse.Array#indexOf and Fuse.Array#lastIndexOf use toInteger(). [jddalton]
+
 * Optimize Fuse.String#times by using the `Exponentiation by squaring` algorithm. [Yaffle]
 
 * Add support for Fuse.get('<div>') and Fuse.Dom.Element('<div>') to return a new decorated element. [jddalton]
